...
                },
            })}

            barStyle={{ backgroundColor: '#694fad' }}
            tabBarColor="#00aaff"
        >
            <Tab.Screen name="Home" component={Root} options={{ headerShown: false, tabBarTestID: 'HomeTab'}} />
            <Tab.Screen name="Browse" component={Browse} options={{ headerShown: false, tabBarTestID: 'BrowseTab'}} />
            <Tab.Screen name="Chats" component={ChatRoot} options={{ headerShown: false, tabBarTestID: 'ChatsTab'}} />
            <Tab.Screen name="PointScreen" component={PointScreenRoot} options={{ headerShown: false, tabBarTestID: 'PointScreenTab'}} />
            <Tab.Screen name="Account" component={ProfileRoot} options={{ headerShown: false, tabBarTestID: 'AccountTab'}} />
        </Tab.Navigator>
    );
};

export default Toolbar;
