...
                        </Pressable>

                        <Pressable mode="contained"
                            style={styles.accountButton}
                            onPress={() => navigation.navigate("ProfileBasicInfo", {user: user})}
                        >
                            <Text style={styles.buttonText}>Edit Personal Details</Text>
                        </Pressable>

                        <Pressable mode="contained"
                            style={styles.accountButton}
                            onPress={() => navigation.navigate("UserProfile", {user: user})}
                        >
...
                        </Pressable>

                        <Pressable mode="contained"
                            style={styles.accountButton}
                            onPress={() => navigation.navigate("ProfileBlocklist")}
                        >
                            <Text style={styles.buttonText}>View Blocklist</Text>
                        </Pressable>

                        </>
                    );
                })}
            </View>
...
