...
               );}
           })}
       </ScrollView>
   </SafeAreaView> */

    return (
        <ScrollView testID="scrollViewChat" style={styles.container}>
            <Header />

            <View>
                {users.length > 0 ? (
                    <View style={styles.headerWrapper}>
                        <Text style={styles.subtext}>Messages</Text>
...
