...
        )
        navigation.navigate('PointScreen')
    }


  return (
    <ScrollView testID = "scrollView3">
        <Appbar.BackAction onPress={() => navigation.navigate(PointScreen)} />
        <Text style={styles.mainText}>Style Shop</Text>
        <Text style={styles.subtext}>Bored of your look? Let's change things up with your own personal style!</Text>
        <Title style={styles.points}>
                Points: {userGarden.points}
        </Title>
...
