...
                          </MenuOption>
                      )}
                  />
              </MenuOptions>
          </Menu>
            <TouchableOpacity
            testID='camera'
            onPress={chooseFile}
            style={styles.cameraButton}>
               <Icon name="camera-outline" size={32} color="black" />
            </TouchableOpacity>
        </View>

...
