...
                />

                <Text style={styles.label}>Age</Text>
                <TextInput placeholder={user.age ? (user.age.toString()) : ("Enter your age")}
                     numeric value
                     keyboardType={'numeric'}
                     testID="AgeInput"
                     style={styles.inputBox}
                     onChangeText={(text) => {
                     /*
                         if (!isNaN(+(text)) && +((text) >= 18) && +((text) <= 150)) {
                            setAge(+(text))
                         } else {
...
                    onChangeValue={(value) => setRegion(value)}
                />

                <Text style={styles.label}>Status</Text>
                <TextInput placeholder={user.status}
                    style={styles.inputBox}
                    testID="StatusInput"
                     onChangeText={(text) =>
                        setStatus(text)
                     }
                />

                <Button icon="content-save"
...
